js: upgrade syntax to java 14+