@@ -51,94 +51,85 @@ class JsObject implements ObjectLike, Invokable, Iterable<KeyValue> {
             @SuppressWarnings("unchecked")
             @Override
             public Object getProperty(String propName) {
-                switch (propName) {
-                    case "toString":
-                        return (JsCallable) (context, args) -> Terms.TO_STRING(context.thisObject);
-                    case "valueOf":
-                        return (JsCallable) (context, args) -> context.thisObject;
-                    case "hasOwnProperty":
-                        return (JsCallable) (context, args) -> {
-                            if (args.length == 0 || args[0] == null) {
-                                return false;
-                            }
-                            String prop = args[0].toString();
-                            if (context.thisObject instanceof ObjectLike objectLike) {
-                                Map<String, Object> map = objectLike.toMap();
-                                return map != null && map.containsKey(prop);
-                            } else if (context.thisObject instanceof Map) {
-                                Map<String, Object> map = (Map<String, Object>) context.thisObject;
-                                return map.containsKey(prop);
-                            }
+                return switch (propName) {
+                    case "toString" -> (JsCallable) (context, args) -> Terms.TO_STRING(context.thisObject);
+                    case "valueOf" -> (JsCallable) (context, args) -> context.thisObject;
+                    case "hasOwnProperty" -> (JsCallable) (context, args) -> {
+                        if (args.length == 0 || args[0] == null) {
                             return false;
-                        };
+                        }
+                        String prop = args[0].toString();
+                        if (context.thisObject instanceof ObjectLike objectLike) {
+                            Map<String, Object> map = objectLike.toMap();
+                            return map != null && map.containsKey(prop);
+                        } else if (context.thisObject instanceof Map) {
+                            Map<String, Object> map = (Map<String, Object>) context.thisObject;
+                            return map.containsKey(prop);
+                        }
+                        return false;
+                    };
                     // static ==========================================================================================
-                    case "keys":
-                        return (Invokable) args -> {
-                            List<Object> result = new ArrayList<>();
-                            for (KeyValue kv : toIterable(args[0])) {
-                                result.add(kv.key);
-                            }
-                            return result;
-                        };
-                    case "values":
-                        return (Invokable) args -> {
-                            List<Object> result = new ArrayList<>();
-                            for (KeyValue kv : toIterable(args[0])) {
-                                result.add(kv.value);
-                            }
-                            return result;
-                        };
-                    case "entries":
-                        return (Invokable) args -> {
-                            List<Object> result = new ArrayList<>();
-                            for (KeyValue kv : toIterable(args[0])) {
-                                List<Object> entry = new ArrayList<>();
-                                entry.add(kv.key);
-                                entry.add(kv.value);
-                                result.add(entry);
-                            }
-                            return result;
-                        };
-                    case "assign":
-                        return (Invokable) args -> {
-                            if (args.length == 0) {
-                                return new LinkedHashMap<>();
-                            }
-                            if (args[0] == null || args[0] == Terms.UNDEFINED) {
-                                throw new RuntimeException("assign() requires valid first argument");
-                            }
-                            Iterable<KeyValue> iterable = toIterable(args[0]);
-                            Map<String, Object> result = new LinkedHashMap<>();
-                            for (KeyValue kv : iterable) {
+                    case "keys" -> (Invokable) args -> {
+                        List<Object> result = new ArrayList<>();
+                        for (KeyValue kv : toIterable(args[0])) {
+                            result.add(kv.key);
+                        }
+                        return result;
+                    };
+                    case "values" -> (Invokable) args -> {
+                        List<Object> result = new ArrayList<>();
+                        for (KeyValue kv : toIterable(args[0])) {
+                            result.add(kv.value);
+                        }
+                        return result;
+                    };
+                    case "entries" -> (Invokable) args -> {
+                        List<Object> result = new ArrayList<>();
+                        for (KeyValue kv : toIterable(args[0])) {
+                            List<Object> entry = new ArrayList<>();
+                            entry.add(kv.key);
+                            entry.add(kv.value);
+                            result.add(entry);
+                        }
+                        return result;
+                    };
+                    case "assign" -> (Invokable) args -> {
+                        if (args.length == 0) {
+                            return new LinkedHashMap<>();
+                        }
+                        if (args[0] == null || args[0] == Terms.UNDEFINED) {
+                            throw new RuntimeException("assign() requires valid first argument");
+                        }
+                        Iterable<KeyValue> iterable = toIterable(args[0]);
+                        Map<String, Object> result = new LinkedHashMap<>();
+                        for (KeyValue kv : iterable) {
+                            result.put(kv.key, kv.value);
+                        }
+                        for (int i = 1; i < args.length; i++) {
+                            for (KeyValue kv : toIterable(args[i])) {
                                 result.put(kv.key, kv.value);
                             }
-                            for (int i = 1; i < args.length; i++) {
-                                for (KeyValue kv : toIterable(args[i])) {
-                                    result.put(kv.key, kv.value);
-                                }
-                            }
-                            return result;
-                        };
-                    case "fromEntries":
-                        return (Invokable) args -> {
-                            if (args.length == 0 || args[0] == null || args[0] == Terms.UNDEFINED) {
-                                throw new RuntimeException("fromEntries() requires valid argument(s)");
-                            }
-                            Map<String, Object> result = new LinkedHashMap<>();
-                            for (KeyValue kv : toIterable(args[0])) {
-                                result.put(kv.key, kv.value);
-                            }
-                            return result;
-                        };
-                    case "is":
-                        return (Invokable) args -> {
-                            if (args.length < 2) {
-                                return false;
-                            }
-                            return Terms.eq(args[0], args[1], true);
-                        };
-                }
-                return null;
+                        }
+                        return result;
+                    };
+                    case "fromEntries" -> (Invokable) args -> {
+                        if (args.length == 0 || args[0] == null || args[0] == Terms.UNDEFINED) {
+                            throw new RuntimeException("fromEntries() requires valid argument(s)");
+                        }
+                        Map<String, Object> result = new LinkedHashMap<>();
+                        for (KeyValue kv : toIterable(args[0])) {
+                            result.put(kv.key, kv.value);
+                        }
+                        return result;
+                    };
+                    case "is" -> (Invokable) args -> {
+                        if (args.length < 2) {
+                            return false;
+                        }
+                        return Terms.eq(args[0], args[1], true);
+                    };
+                    default -> null;
+                };
             }
         };
     }
@@ -210,7 +201,7 @@ class JsObject implements ObjectLike, Invokable, Iterable<KeyValue> {
                             String k = null;
                             Object v = null;
                             if (!list.isEmpty()) {
-                                k = list.get(0) == null ? null : list.get(0).toString();
+                                k = list.getFirst() == null ? null : list.getFirst().toString();
                             }
                             if (list.size() > 1) {
                                 v = list.get(1);
